# koar

./: .gitignore  Makefile  config.mk  koar.cabal
hs/: Test.hs
hs/Koar/: BlOsc.hs  Common.hs  Equalizer.hs  Flow.hs  LTI.hs  PadSynth.hs  Patch.hs  Patchctl.hs  Pattern.hs  PdOsc.hs  Pitch.hs  Proto.hs  Reverb.hs  Score.hs
src/: array.c  array.h  buf.c  buf.h  defs.h  delay.c  delay.h  main.c  patch.c  patch.h  patchctl.c  patchctl.h  patchvm-opcodes.h  patchvm.c  patchvm.h  peers.c  peers.h  proto.h  test.c
src/nodes/: active.h  biquad.c  blit.c  cos2pi.c  delays.c  env.c  env.h  fwriter.c  fwriter.h  lookup.c  moog.c  noise.c  passive.c  passive.h  phasor.c  phasor.h  reson.c  reverb.c  tanh.c  touch.c  vdelay.c  wire.c  wire.h
