name:                   koar
version:                0.1.0.0
license:                MIT
author:                 Frano Perleta
maintainer:             frane.perleta@gmail.com
build-type:             Simple
cabal-version:          >=1.8

library
  exposed-modules:      Koar.BlOsc,
                        Koar.Common,
                        Koar.Equalizer,
                        Koar.Flow,
                        Koar.LTI,
                        Koar.Patch,
                        Koar.Patchctl,
                        Koar.PdOsc,
                        Koar.Reverb,
                        Koar.Score
  other-modules:        Koar.Proto
  hs-source-dirs:       hs
  build-depends:        base >=4.6,
                        bytestring >=0.10,
                        containers >=0.5,
                        mtl >=2.1,
                        network >=2.4,
                        process >=1.1,
                        text >=0.11,
                        transformers >=0.3,
                        easyplot >=1

